--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
            package_root: .debpkg
            maintainer: Libertech
            version: ${{ github.ref }} # refs/tags/v*.*.*
-           depends: 'phyton3'
+           depends: 'python3'
            desc: 'convert csv to json'
            homepage: 'https://github.com/Libertech-FR/sesame-csvtojson'
       - uses: svenstaro/upload-release-action@v2
